# Medical_imaging

./: .gitignore  README.md  generate_submission.py  pretrain_simclr.py  pyproject.toml  submission_best.csv  train.py
configs/: cnn_unet.yaml  simclr.yaml  transunet.yaml  transunet_no_pretrain.yaml
scripts/: run_pretrain_simclr.sh  run_problem1.sh  run_problem2.sh  run_problem3.sh  run_train.sh
src/: dataset.py  loss.py  metric.py  model.py  trainer.py  utils.py
